[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limbdark"
dynamic = ["version"]
authors = [
    {name = "John Livingston", email = "livingston.astro@gmail.com"},
]
description = "A simple package for obtaining Gaussian priors for limb darkening coefficients."
readme = "README.md"
license = {text = "GNU GPLv3"}
keywords = ["limb-darkening"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/john-livingston/limbdark"
Repository = "https://github.com/john-livingston/limbdark"

[tool.setuptools]
packages = ["limbdark"]

[tool.setuptools.package-data]
limbdark = [
    "data/claret+2011_linear.csv.gz",
    "data/claret+2011_logarithmic.csv.gz",
    "data/claret+2011_nonlinear.csv.gz",
    "data/claret+2011_quadratic.csv.gz",
    "data/claret+2011_squareroot.csv.gz",
    "data/claret_2017_table13.csv.gz",
    "data/claret_2017_table15.csv.gz",
    "data/claret_2017_table17.csv.gz",
    "data/claret_2017_table19.csv.gz",
    "data/claret_2017_table21.csv.gz",
    "data/claret_2017_table24.csv.gz",
    "data/claret_2017_table25.csv.gz",
    "data/claret_2017_table26.csv.gz",
    "data/claret_2017_table27.csv.gz",
    "data/claret_2017_table28.csv.gz",
]

[tool.setuptools.dynamic]
version = {attr = "limbdark.__version__"}
